[Fix]: complete header & section.top

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>en_Taku</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
     <header>
       <div class="logo header"></div>
       <ul class="main-nav">
-        <li>Company</li>
-        <li>Livers</li>
-        <li>
-          <img src="" alt="" />
-          <span>Contact</span>
-        </li>
+        <li><a>Company</a></li>
+        <li class="slash"></li>
+        <li><a>Livers</a></li>
+        <li><a>Contact</a></li>
       </ul>
     </header>
     <main>
@@ -25,11 +25,11 @@
             TikTokでのあなたの活動を、私たちen-Takuが全力でサポートします。個性と魅力を最大限に引き出し、輝くライバーとして成功するための第一歩を踏み出してみませんか？
           </p>
         </div>
-        <div class="top-img">
-          <img src="" alt="" />
+        <div class="top-img fir">
+          <img src="./img/top01.png" alt="" />
         </div>
-        <div class="top-img">
-          <img src="" alt="" />
+        <div class="top-img sec">
+          <img src="./img/top02.png" alt="" />
         </div>
         <div class="text-slide">The shortest route to success</div>
       </section>
