[Fix]: section about pc

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,7 @@
         <div class="top-img sec">
           <img src="./img/top02.png" alt="" />
         </div>
-        <div class="text-slide">The shortest route to success</div>
+        <marquee class="text-slide">The shortest route to success</marquee>
       </section>
       <section class="about">
         <div class="section-title">
