--- a/HTML/index.html
+++ b/HTML/index.html
@@ -60,7 +60,7 @@
             <div class="item-img">
               <span>01</span>
               <div class="icon">
-                <img src="" alt="" />
+                <img src="./img/icon01.png" alt="" />
               </div>
             </div>
             <div class="item-content">
@@ -72,7 +72,7 @@
             <div class="item-img">
               <span>02</span>
               <div class="icon">
-                <img src="" alt="" />
+                <img src="./img/icon02.png" alt="" />
               </div>
             </div>
             <div class="item-content">
@@ -86,7 +86,7 @@
             <div class="item-img">
               <span>03</span>
               <div class="icon">
-                <img src="" alt="" />
+                <img src="./img/icon03.png" alt="" />
               </div>
             </div>
             <div class="item-content">
