[FIX]: section faq pc

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -138,7 +138,7 @@
         </div>
       </section>
       <section class="faq">
-        <div class="parellel-title parellel">事務所所属による特典​</div>
+        <div class="parellel-title parellel"><span>事務所所属による特典</span></div>
         <div class="faq-content">
           <div class="faq-item">
             <div class="item-num">01</div>
