--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,18 @@
     <title>en_Taku</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/common.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://use.typekit.net/abg4zef.css" />
   </head>
   <body>
     <header>
@@ -222,31 +234,32 @@
         </div>
         <div class="livers-content">
           <div class="livers-item">
-            <div class="item-img"></div>
+            <div class="item-img"><img src="./img/liver01.png" /></div>
             <div class="item-content">
               <p>アンバサダー</p>
               <h2>Shu@Fm...【en-Taku】</h2>
               <p>
-                日本で30名程度のみいるギフターレベル50Lv達成者
-                日間ランキング6位獲得 2025年第一回ゴールドⅠ3位
-                日韓台グローバルPK HERO3位
+                日本で30名程度のみいるギフターレベル50Lv達成者<br />
+                日間ランキング6位獲得 2025年第一回ゴールドⅠ3位<br />
+                日韓台グローバルPK HERO3位<br /><br />
               </p>
             </div>
             <div class="item-footer">
               <p>Shu@Fm...が設立した新鋭ライバー事務所です。</p>
             </div>
-            <div class="item-button">shu770728</div>
+            <button class="item-button">shu770728</button>
           </div>
           <div class="livers-item">
-            <div class="item-img"></div>
+            <div class="item-img"><img src="./img/liver02.png" /></div>
             <div class="item-content">
               <h2>だいこんせんせいだよ</h2>
               <p>
-                2024年度年間新人王総合1位 2025年1月
-                パフォーマンスキング雑談部門1位 2025年1月 TikTok Live
-                Ranking人気部門5位　 2025年2月 パフォーマンスキング雑談部門2位
-                日間1位達成 9.8M 2024/12/15 殿堂2位達成 13.9M
-                第4回新人王シルバーリーグ1位
+                2024年度年間新人王総合1位 2025年1月<br />
+                パフォーマンスキング雑談部門1位 2025年1月 TikTok Live<br />
+                Ranking人気部門5位　 2025年2月
+                パフォーマンスキング雑談部門2位<br />
+                日間1位達成 9.8M 2024/12/15 殿堂2位達成 13.9M<br />
+                第4回新人王シルバーリーグ1位<br />
               </p>
             </div>
             <div class="item-footer">
@@ -254,7 +267,7 @@
                 当事務所が誇るトップライバー「だいこんせんせいだよ」は、en-Takuの成長支援プログラムを活用し、短期間で大きな成功を収めました。
               </p>
             </div>
-            <div class="item-button">daikonsensei_dayo</div>
+            <button class="item-button">daikonsensei_dayo</button>
           </div>
         </div>
         <div class="livers-btn">
