[FIX]: section system pc

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -275,17 +275,17 @@
         </div>
       </section>
       <section class="system">
-        <div class="section-title">
+        <div class="section-title container-fluid">
           System
           <div class="description">収益化の仕組み</div>
         </div>
-        <div class="sys-img"></div>
-        <div class="strengths-content">
+        <div class="sys-img"><img src="./img/system_top.png"></div>
+        <div class="strengths-content container">
           <div class="strengths-item">
             <div class="item-img">
               <span>01</span>
               <div class="icon">
-                <img src="" alt="" />
+                <img src="./img/icon04.png" alt="" />
               </div>
             </div>
             <div class="item-content">
@@ -299,7 +299,7 @@
             <div class="item-img">
               <span>02</span>
               <div class="icon">
-                <img src="" alt="" />
+                <img src="./img/icon05.png" alt="" />
               </div>
             </div>
             <div class="item-content">
@@ -312,8 +312,8 @@
           <div class="strengths-item">
             <div class="item-img">
               <span>03</span>
-              <div class="icon">
-                <img src="" alt="" />
+              <div class="icon icon06">
+                <img src="./img/icon06.png" alt="" />
               </div>
             </div>
             <div class="item-content">
@@ -325,8 +325,8 @@
             </div>
           </div>
         </div>
-        <div class="flow-content">
-          <div class="sub-title">
+        <div class="flow container">
+          <div class="section-title">
             Flow
             <div class="description">所属までの流れ</div>
           </div>
@@ -353,6 +353,7 @@
             </div>
           </div>
         </div>
+        <div class="system-back"></div>
       </section>
       <section class="contact">
         <div class="contact-item">
