--- a/HTML/index.html
+++ b/HTML/index.html
@@ -270,7 +270,7 @@
             <button class="item-button">daikonsensei_dayo</button>
           </div>
         </div>
-        <div class="livers-btn">
+        <div class="more-btn">
           <button>more</button>
         </div>
       </section>
@@ -279,7 +279,7 @@
           System
           <div class="description">収益化の仕組み</div>
         </div>
-        <div class="sys-img"><img src="./img/system_top.png"></div>
+        <div class="sys-img"><img src="./img/system_top.png" /></div>
         <div class="strengths-content container">
           <div class="strengths-item">
             <div class="item-img">
@@ -355,7 +355,7 @@
         </div>
         <div class="system-back"></div>
       </section>
-      <section class="contact">
+      <section class="contact container-fluid">
         <div class="contact-item">
           <div class="item-title">
             Company
@@ -370,12 +370,14 @@
           </div>
           <div class="more">more</div>
         </div>
-        <div class="contact-item">
-          <div class="item-title">
+        <div class="contact-item container-fluid">
+          <div class="item-title container">
             Contact
             <div class="description">お問い合わせ</div>
           </div>
-          <div class="more">more</div>
+          <div class="more-btn container">
+            <button>more</button>
+          </div>
         </div>
       </section>
     </main>
