[FIX]: complete PC

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -382,11 +382,14 @@
       </section>
     </main>
     <footer>
-      <div class="logo footer"></div>
-      <ul class="footer-nav">
-        <li>Company</li>
-        <li>Livers</li>
-      </ul>
+      <div class="footer container">
+        <div class="footer-logo"><img src="./img/footer-logo.png" /></div>
+        <ul class="footer-nav">
+          <li>Company</li>
+          <li></li>
+          <li>Livers</li>
+        </ul>
+      </div>
       <div class="copyright">Copyright ©en-Taku 2025</div>
     </footer>
   </body>
