--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,10 +23,10 @@
     <header>
       <div class="logo header"></div>
       <ul class="main-nav">
-        <li><a>Company</a></li>
+        <li><a href="#company">Company</a></li>
         <li class="slash"></li>
-        <li><a>Livers</a></li>
-        <li><a>Contact</a></li>
+        <li><a href="#livers">Livers</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
     </header>
     <main>
@@ -227,7 +227,7 @@
           </div>
         </div>
       </section>
-      <section class="livers container-fluid">
+      <section class="livers container-fluid" id="livers">
         <div class="section-title">
           livers
           <div class="description">ライバー</div>
@@ -356,7 +356,7 @@
         <div class="system-back"></div>
       </section>
       <section class="contact container-fluid">
-        <div class="contact-item">
+        <div class="contact-item" id="company">
           <div class="item-title">
             Company
             <div class="description">会社概要</div>
@@ -370,7 +370,7 @@
           </div>
           <div class="more">more</div>
         </div>
-        <div class="contact-item container-fluid">
+        <div class="contact-item container-fluid" id="contact">
           <div class="item-title container">
             Contact
             <div class="description">お問い合わせ</div>
@@ -383,11 +383,11 @@
     </main>
     <footer>
       <div class="footer container">
-        <div class="footer-logo"><img src="./img/footer-logo.png" /></div>
+        <a href="#" class="footer-logo"><img src="./img/footer-logo.png" /></a>
         <ul class="footer-nav">
-          <li>Company</li>
+          <li><a href="#company">Company</a></li>
           <li></li>
-          <li>Livers</li>
+          <li><a href="#livers">Livers</a></li>
         </ul>
       </div>
       <div class="copyright">Copyright ©en-Taku 2025</div>
