[FIX]: fix menu

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,8 +32,8 @@
       </ul>
     </header>
     <main>
-      <div class="menu show" id="menu-box">
-        <ul class="sp_menu sp">
+      <div class="menu" id="menu-box">
+        <ul class="sp_menu">
           <li><a href="">Company</a></li>
           <li><a href="#livers">Livers</a></li>
           <li><a href="">Contact</a></li>
