--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,9 +41,19 @@
       </div>
       <section class="top">
         <div class="content">
-          <h1>成功<span>まで</span> 最短距離</h1>
-          <p>
+          <h1>
+            成功<span>まで</span><br />
+            最短距離
+          </h1>
+          <p class="pc">
             TikTokでのあなたの活動を、私たちen-Takuが全力でサポートします。個性と魅力を最大限に引き出し、輝くライバーとして成功するための第一歩を踏み出してみませんか？
+          </p>
+          <p class="sp">
+            TikTokでのあなたの活動を、<br />
+            私たちen-Takuが全力でサポートします。<br />
+            個性と魅力を最大限に引き出し、<br />
+            輝くライバーとして成功するための<br />
+            第一歩を踏み出してみませんか？
           </p>
         </div>
         <div class="top-img fir">
