[FIX]: complete section faq SP

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -176,9 +176,11 @@
           <div class="faq-item">
             <div class="item-num">01</div>
             <div class="item-content">
-              <h2>
+              <h2 class="pc">
                 無所属でも事務所所属でも、TikTokから受けれる還元率は変わりません。
               </h2>
+              <h2 class="sp">無所属でも事務所所属でも、TikTokから</h2>
+              <h2 class="sp">受けれる還元率は変わりません。</h2>
               <p>
                 その為、事務所に所属した方のみ様々なサポートが受けれる為、ライバーさんにはメリット多数
               </p>
@@ -187,7 +189,11 @@
           <div class="faq-item">
             <div class="item-num">02</div>
             <div class="item-content">
-              <h2>提携先最大手ライバー事務所のノウハウを同時に提供可</h2>
+              <h2 class="pc">
+                提携先最大手ライバー事務所のノウハウを同時に提供可
+              </h2>
+              <h2 class="sp">提携先最大手ライバー事務所のノウハウ</h2>
+              <h2 class="sp">を同時に提供可</h2>
               <p>
                 事務所運営歴5年の大手ライバー事務所と提携している為、ノウハウ提供や、共同事務所イベントの参加が可能
               </p>
@@ -196,7 +202,9 @@
           <div class="faq-item">
             <div class="item-num">03</div>
             <div class="item-content">
-              <h2>アカウントトラブルに対する迅速なアプローチ</h2>
+              <h2 class="pc">アカウントトラブルに対する迅速なアプローチ</h2>
+              <h2 class="sp">アカウントトラブルに対する迅速なアプ</h2>
+              <h2 class="sp">ローチ</h2>
               <p>
                 「警告」「BAN」に対するフォローアップ、解決確率が遥かに高まります（個人と比較して）
               </p>
@@ -205,9 +213,11 @@
           <div class="faq-item">
             <div class="item-num">04</div>
             <div class="item-content">
-              <h2>
+              <h2 class="pc">
                 当事務所設立者のshu@Fm..による最新の活きたトレンドやノウハウを伝授
               </h2>
+              <h2 class="sp">当事務所設立者のshu@Fm..による最新</h2>
+              <h2 class="sp">の活きたトレンドやノウハウを伝授</h2>
               <p>
                 最新のTikTok
                 LiveのトレンドやPK、イベント、ギフトリアクションのノウハウ等惜しみなく伝授
