[FIX]: complete section livers SP

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -282,13 +282,21 @@
             <div class="item-img"><img src="./img/liver02.png" /></div>
             <div class="item-content">
               <h2>だいこんせんせいだよ</h2>
-              <p>
+              <p class="pc">
                 2024年度年間新人王総合1位 2025年1月<br />
                 パフォーマンスキング雑談部門1位 2025年1月 TikTok Live<br />
                 Ranking人気部門5位　 2025年2月
                 パフォーマンスキング雑談部門2位<br />
                 日間1位達成 9.8M 2024/12/15 殿堂2位達成 13.9M<br />
                 第4回新人王シルバーリーグ1位<br />
+              </p>
+              <p class="sp">
+                2024年度年間新人王総合1位 <br />
+                2025年1月 パフォーマンスキング雑談部門1位 <br />
+                2025年1月 TikTok Live Ranking人気部門5位<br />
+                2025年2月 パフォーマンスキング雑談部門2位<br />
+                日間1位達成 9.8M 2024/12/15 <br />
+                殿堂2位達成 13.9M<br />
               </p>
             </div>
             <div class="item-footer">
