[ADD]: add section system sp

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -316,7 +316,8 @@
           System
           <div class="description">収益化の仕組み</div>
         </div>
-        <div class="sys-img"><img src="./img/system_top.png" /></div>
+        <div class="sys-img pc"><img src="./img/system_top.png" /></div>
+        <div class="sys-img sp"><img src="./img/system_top_sp.png" /></div>
         <div class="strengths-content container">
           <div class="strengths-item">
             <div class="item-img">
