[ADD]: complete section system - flow sp

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -371,23 +371,31 @@
           <div class="flow-content">
             <div class="flow-item">
               <div class="item-num">01</div>
-              <h1>お問い合わせ</h1>
-              <p>メールまたはLINEで気軽にご連絡ください。</p>
+              <div class="item-content">
+                <h1>お問い合わせ</h1>
+                <p>メールまたはLINEで気軽にご連絡ください。</p>
+              </div>
             </div>
             <div class="flow-item">
               <div class="item-num">02</div>
-              <h1>面談予約</h1>
-              <p>オンラインまたは対面での個別相談を設定します。</p>
+              <div class="item-content">
+                <h1>面談予約</h1>
+                <p>オンラインまたは対面での個別相談を設定します。</p>
+              </div>
             </div>
             <div class="flow-item">
               <div class="item-num">03</div>
-              <h1>契約</h1>
-              <p>お互いにベストな形での契約内容をご提案します。</p>
+              <div class="item-content">
+                <h1>契約</h1>
+                <p>お互いにベストな形での契約内容をご提案します。</p>
+              </div>
             </div>
             <div class="flow-item">
               <div class="item-num">04</div>
-              <h1>活動開始</h1>
-              <p>配属するマネージャーとともに成功への道を歩み始めましょう。</p>
+              <div class="item-content">
+                <h1>活動開始</h1>
+                <p>配属するマネージャーとともに成功への道を歩み始めましょう。</p>
+              </div>
             </div>
           </div>
         </div>
