[ADD]: complete footer sp

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -432,7 +432,7 @@
         <a href="#" class="footer-logo"><img src="./img/footer-logo.png" /></a>
         <ul class="footer-nav">
           <li><a href="#company">Company</a></li>
-          <li></li>
+          <li class="pc"></li>
           <li><a href="#livers">Livers</a></li>
         </ul>
       </div>
