[ADD]: add 1 file - company page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
         <li class="pc"><a href="#company">Company</a></li>
         <li class="slash pc"></li>
         <li class="pc"><a href="#livers">Livers</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
         <li class="menu-icon sp" id="toggleBtn"><span></span></li>
       </ul>
     </header>
@@ -36,7 +36,7 @@
         <ul class="sp_menu">
           <li><a href="">Company</a></li>
           <li><a href="#livers">Livers</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
       <section class="top">
@@ -421,7 +421,7 @@
             Contact
             <div class="description">お問い合わせ</div>
           </div>
-          <div class="more-btn container">
+          <div class="more-btn">
             <button>more</button>
           </div>
         </div>
