[ADD]: add contact page

--- a/HTML/company.html
+++ b/HTML/company.html
@@ -39,7 +39,7 @@
           <li><a href="">Contact</a></li>
         </ul>
       </div>
-      <section class="company-top">
+      <section class="page-top" id="company-top">
         <div class="section-title">
           Company
           <div class="description">会社概要</div>
