--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,7 +34,7 @@
     <main>
       <div class="menu" id="menu-box">
         <ul class="sp_menu">
-          <li><a href="">Company</a></li>
+          <li><a href="./company.html">Company</a></li>
           <li><a href="#livers">Livers</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
