--- a/HTML/company.html
+++ b/HTML/company.html
@@ -22,21 +22,21 @@
   </head>
   <body class="close">
     <header>
-      <div class="logo header"></div>
+      <a href="./index.html"><div class="logo header"></div></a>
       <ul class="main-nav">
-        <li class="pc"><a href="#company">Company</a></li>
+        <li class="pc"><a href="./company.html">Company</a></li>
         <li class="slash pc"></li>
-        <li class="pc"><a href="#livers">Livers</a></li>
-        <li><a href="">Contact</a></li>
+        <li class="pc"><a href="./liver.html">Livers</a></li>
+        <li><a href="./contact.html">Contact</a></li>
         <li class="menu-icon sp" id="toggleBtn"><span></span></li>
       </ul>
     </header>
     <main>
       <div class="menu" id="menu-box">
         <ul class="sp_menu">
-          <li><a href="">Company</a></li>
-          <li><a href="#livers">Livers</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./company.html">Company</a></li>
+          <li><a href="./liver.html">Livers</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
       <section class="page-top" id="company-top">
@@ -73,18 +73,20 @@
             <div class="description">お問い合わせ</div>
           </div>
           <div class="more-btn">
-            <button>more</button>
+            <a href="./contact.html">more</a>
           </div>
         </div>
       </section>
     </main>
     <footer>
       <div class="footer container">
-        <a href="#" class="footer-logo"><img src="./img/footer-logo.png" /></a>
+        <a href="./index.html" class="footer-logo"
+          ><img src="./img/footer-logo.png"
+        /></a>
         <ul class="footer-nav">
-          <li><a href="#company">Company</a></li>
+          <li><a href="./company.html">Company</a></li>
           <li class="pc"></li>
-          <li><a href="#livers">Livers</a></li>
+          <li><a href="./liver.html">Livers</a></li>
         </ul>
       </div>
       <div class="copyright">Copyright ©en-Taku 2025</div>
