--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -22,11 +22,11 @@
   </head>
   <body class="close">
     <header>
-      <div class="logo header"></div>
+      <a href="./index.html"><div class="logo header"></div></a>
       <ul class="main-nav">
         <li class="pc"><a href="./company.html">Company</a></li>
         <li class="slash pc"></li>
-        <li class="pc"><a href="#livers">Livers</a></li>
+        <li class="pc"><a href="./liver.html">Livers</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li class="menu-icon sp" id="toggleBtn"><span></span></li>
       </ul>
@@ -34,8 +34,8 @@
     <main>
       <div class="menu" id="menu-box">
         <ul class="sp_menu">
-          <li><a href="">Company</a></li>
-          <li><a href="#livers">Livers</a></li>
+          <li><a href="./company.html">Company</a></li>
+          <li><a href="./liver.html">Livers</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
@@ -137,20 +137,22 @@
           ></textarea>
 
           <div class="more-btn">
-            <button>
+            <a>
               <input type="submit" id="submit" value="確認画面" />
-            </button>
+            </a>
           </div>
         </form>
       </section>
     </main>
     <footer>
       <div class="footer container">
-        <a href="#" class="footer-logo"><img src="./img/footer-logo.png" /></a>
+        <a href="./index.html" class="footer-logo"
+          ><img src="./img/footer-logo.png"
+        /></a>
         <ul class="footer-nav">
-          <li><a href="#company">Company</a></li>
+          <li><a href="./company.html">Company</a></li>
           <li class="pc"></li>
-          <li><a href="#livers">Livers</a></li>
+          <li><a href="./liver.html">Livers</a></li>
         </ul>
       </div>
       <div class="copyright">Copyright ©en-Taku 2025</div>
