[FIX]: fix buttons hover effect

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -45,7 +45,7 @@
           <div class="description">お問い合わせ</div>
         </div>
       </section>
-      <section class="contact-step sm-container">
+      <section class="contact-step sm-container container">
         <div class="content">
           <p>
             en-Takuへのお問い合わせは、下記のフォームにご入力ください。<br />
@@ -61,7 +61,7 @@
           <p class="thr">送信</p>
         </div>
       </section>
-      <section class="contact-box sm-container">
+      <section class="contact-box sm-container container">
         <label for="format">お問い合わせ項目</label>
         <div class="boxs">
           <input
@@ -84,7 +84,7 @@
           />採用について
         </div>
       </section>
-      <section class="contact-form sm-container">
+      <section class="contact-form sm-container container">
         <form action="">
           <label for="company_name">会社名<span class="red">※</span></label>
           <input
