--- a/HTML/index.html
+++ b/HTML/index.html
@@ -276,7 +276,9 @@
             <div class="item-footer">
               <p>Shu@Fm...が設立した新鋭ライバー事務所です。</p>
             </div>
-            <button class="item-button">shu770728</button>
+            <a href="mailto:shu770728@gmail.com" class="item-button"
+              >shu770728</a
+            >
           </div>
           <div class="livers-item">
             <div class="item-img"><img src="./img/liver02.png" /></div>
@@ -304,7 +306,9 @@
                 当事務所が誇るトップライバー「だいこんせんせいだよ」は、en-Takuの成長支援プログラムを活用し、短期間で大きな成功を収めました。
               </p>
             </div>
-            <button class="item-button">daikonsensei_dayo</button>
+            <a href="mailto:daikonsensei_dayo@gmail.com" class="item-button"
+              >daikonsensei_dayo</a
+            >
           </div>
         </div>
         <div class="more-btn">
