--- a/HTML/liver.html
+++ b/HTML/liver.html
@@ -39,17 +39,13 @@
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
-      <section class="page-top" id="company-top">
+      <section class="page-top" id="liver-top">
         <div class="section-title">
-          Company
-          <div class="description">会社概要</div>
+          Liver
+          <div class="description">ライバー</div>
         </div>
       </section>
       <section class="livers container-fluid" id="livers">
-        <div class="section-title">
-          livers
-          <div class="description">ライバー</div>
-        </div>
         <div class="livers-content">
           <div class="livers-item">
             <div class="item-img"><img src="./img/liver01.png" /></div>
