[FIX]: complete static html, css

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="close">
     <header>
@@ -406,6 +409,7 @@
             <div class="description">会社概要</div>
           </div>
           <div class="more">more</div>
+          <img src="./img/company.png" alt="company" />
         </div>
         <div class="contact-item">
           <div class="item-title">
@@ -413,6 +417,7 @@
             <div class="description">採用情報</div>
           </div>
           <div class="more">more</div>
+          <img src="./img/recruit.png" alt="recruit" />
         </div>
         <div class="contact-item container-fluid" id="contact">
           <div class="item-title container">
