--- a/HTML/index.html
+++ b/HTML/index.html
@@ -403,22 +403,22 @@
         <div class="system-back"></div>
       </section>
       <section class="contact container-fluid">
-        <div class="contact-item" id="company">
+        <a href="./company.html" class="contact-item" id="company">
           <div class="item-title">
             Company
             <div class="description">会社概要</div>
           </div>
           <div class="more">more</div>
           <img src="./img/company.png" alt="company" />
-        </div>
-        <div class="contact-item">
+        </a>
+        <a href="" class="contact-item">
           <div class="item-title">
             Recruit
             <div class="description">採用情報</div>
           </div>
           <div class="more">more</div>
           <img src="./img/recruit.png" alt="recruit" />
-        </div>
+        </a>
         <div class="contact-item container-fluid" id="contact">
           <div class="item-title container">
             Contact
