--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>en_Taku</title>
+    <link rel="icon" href="./img/favicon.ico" sizes="32x32">
+    <title>ライバー事務所「en-Taku」|  株式会社FanMate</title>
+    <meta name="description" content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。">
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/sp.css" />
@@ -11,14 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://use.typekit.net/abg4zef.css" />
   </head>
   <body class="close">
     <header>
