[FIX]: convert wp from html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./img/favicon.ico" sizes="32x32">
-    <title>ライバー事務所「en-Taku」|  株式会社FanMate</title>
-    <meta name="description" content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。">
+    <link rel="icon" href="./img/favicon.ico" sizes="32x32" />
+    <title>ライバー事務所「en-Taku」| 株式会社FanMate</title>
+    <meta
+      name="description"
+      content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/sp.css" />
