--- a/HTML/company.html
+++ b/HTML/company.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./img/favicon.ico" sizes="32x32">
-    <title>ライバー事務所「en-Taku」|  株式会社FanMate</title>
-    <meta name="description" content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。">
+    <link rel="icon" href="./img/favicon.ico" sizes="32x32" />
+    <title>ライバー事務所「en-Taku」| 株式会社FanMate</title>
+    <meta
+      name="description"
+      content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/sp.css" />
@@ -56,10 +59,16 @@
             <tr>
               <td>住所</td>
               <td>
-                〒150-0012 東京都渋谷区広尾１丁目１０−４ 越山ＬＫビル 4f<br />
+                <p class="pc">
+                  〒150-0012 東京都渋谷区広尾１丁目１０−４ 越山ＬＫビル 4f
+                </p>
+                <p class="sp">
+                  〒150-0012<br />東京都渋谷区広尾１丁目１０−４越山ＬＫビル 4f
+                </p>
                 <iframe
+                  class="pc"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.37!2d139.717706!3d35.645784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b56d1ea8a45%3A0x901433180fba7aee!2z44CSMTUwLTAwMTIg5p2x5Lqs6YO95riL6LC35p2x5Lqs6YO95riL6LC377yR5LiB55uu77yS77yR77yVIOaJgOWkluOBkQ!5e0!3m2!1sja!2sjp!4v1717479020026!5m2!1sja!2sjp"
-                  height="400"
+                  height="600"
                   style="border: 0"
                   allowfullscreen=""
                   loading="lazy"
@@ -70,6 +79,16 @@
             </tr>
           </tbody>
         </table>
+        <iframe
+          class="sp"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.37!2d139.717706!3d35.645784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b56d1ea8a45%3A0x901433180fba7aee!2z44CSMTUwLTAwMTIg5p2x5Lqs6YO95riL6LC35p2x5Lqs6YO95riL6LC377yR5LiB55uu77yS77yR77yVIOaJgOWkluOBkQ!5e0!3m2!1sja!2sjp!4v1717479020026!5m2!1sja!2sjp"
+          height="600"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
       </section>
       <section class="contact container-fluid">
         <div class="contact-item container-fluid" id="contact">
