--- a/HTML/index.html
+++ b/HTML/index.html
@@ -302,8 +302,11 @@
               </p>
             </div>
             <div class="item-footer">
-              <p>
+              <p class="pc">
                 当事務所が誇るトップライバー「だいこんせんせいだよ」は、en-Takuの成長支援プログラムを活用し、短期間で大きな成功を収めました。
+              </p>
+              <p class="sp">
+                当事務所が誇るトップライバー「だいこんせんせいだよ」は、<br />en-Takuの成長支援プログラムを活用し、短期間で大きな成功を収めました。
               </p>
             </div>
             <a href="mailto:daikonsensei_dayo@gmail.com" class="item-button"
