--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./img/favicon.ico" sizes="32x32">
-    <title>ライバー事務所「en-Taku」|  株式会社FanMate</title>
-    <meta name="description" content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。">
+    <link rel="icon" href="./img/favicon.ico" sizes="32x32" />
+    <title>ライバー事務所「en-Taku」| 株式会社FanMate</title>
+    <meta
+      name="description"
+      content="ライバー事務所「en-Taku」は、ライバーの個性と魅力を最大限に引き出し、成功へと導くサポートを行う新鋭の事務所です。業界最高クラスのギフト還元率や、専任スタッフによる個別支援、トラブル対応など安心の体制を整えています。"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/sp.css" />
@@ -61,24 +64,30 @@
       <section class="contact-box sm-container container">
         <label for="format">お問い合わせ項目</label>
         <div class="boxs">
-          <input
-            type="checkbox"
-            name="format"
-            id="format"
-            value="サービスについて"
-          />サービスについて
-          <input
-            type="checkbox"
-            name="format"
-            id="format"
-            value="お見積もり"
-          />お見積もり
-          <input
-            type="checkbox"
-            name="format"
-            id="format"
-            value="採用について"
-          />採用について
+          <div class="box">
+            <input
+              type="checkbox"
+              name="format"
+              id="format"
+              value="サービスについて"
+            />サービスについて
+          </div>
+          <div class="box">
+            <input
+              type="checkbox"
+              name="format"
+              id="format"
+              value="お見積もり"
+            />お見積もり
+          </div>
+          <div class="box">
+            <input
+              type="checkbox"
+              name="format"
+              id="format"
+              value="採用について"
+            />採用について
+          </div>
         </div>
       </section>
       <section class="contact-form sm-container container">
@@ -88,7 +97,7 @@
             type="text"
             name="company_name"
             id="company_name"
-            placeholder="個人事業主の方は『個人』と入力してください。"
+            placeholder="個人事業主の方は「個人」と入力してください。"
           />
           <label for="name">お名前<span class="red">※</span></label>
           <input
